--- a/changelog.txt
+++ b/changelog.txt
@@ -2,4 +2,4 @@
 0.0.2 stworzenie reguł gry(wygrana/remis)
 1.0.0 edytowanie i zapisanie plików Tron.js oraz DoubleSnake.js zawierające sterowanie,warunek wygranej oraz przegranej badź remisu.
 1.0.1 dodanie komentarzy w plikach gry oraz edytowanie pliku DoubleSnake.js m.in. zmiana nazwy pliku DoubleSnake.js na Snake.js 
-1.0.2 edycja rozmiaru mapy
+1.0.2 edycja rozmiaru mapy oraz drobna kosmetyka programu
